# federate

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  blocked_tlds.txt  current.md  desired_tlds
.github/workflows/: ci.yml
crates/federate-bootstrap/: Cargo.toml
crates/federate-bootstrap/src/: lib.rs
crates/federate-cdn/: Cargo.toml
crates/federate-cdn/src/: lib.rs
crates/federate-cli/: Cargo.toml
crates/federate-cli/src/: localca.rs  main.rs
crates/federate-client/: Cargo.toml
crates/federate-client/src/: lib.rs
crates/federate-core/: Cargo.toml
crates/federate-core/src/: lib.rs
crates/federate-directory/: Cargo.toml
crates/federate-directory/src/: lib.rs
crates/federate-dns/: Cargo.toml
crates/federate-dns/src/: lib.rs  wire.rs
crates/federate-dnsd/: Cargo.toml
crates/federate-dnsd/src/: main.rs
crates/federate-gateway/: Cargo.toml
crates/federate-gateway/assets/: averia-serif-libre-400.woff2.b64
crates/federate-gateway/src/: lib.rs
crates/federate-gatewayd/: Cargo.toml
crates/federate-gatewayd/src/: main.rs
crates/federate-identity/: Cargo.toml
crates/federate-identity/src/: lib.rs
crates/federate-manifest/: Cargo.toml
crates/federate-manifest/src/: lib.rs
crates/federate-mutation/: Cargo.toml
crates/federate-mutation/src/: audit.rs  backend.rs  legacy_json.rs  lib.rs  nonce.rs  redb_backend.rs  request.rs  seed.rs  store.rs  tests.rs
crates/federate-naming/: Cargo.toml
crates/federate-naming/src/: lib.rs
crates/federate-node/: Cargo.toml
crates/federate-node/src/: lib.rs
crates/federate-noded/: Cargo.toml
crates/federate-noded/src/: main.rs
crates/federate-protocol/: Cargo.toml
crates/federate-protocol/src/: lib.rs
crates/federate-registry/: Cargo.toml
crates/federate-registry/src/: lib.rs
crates/federate-resolution/: Cargo.toml
crates/federate-resolution/src/: lib.rs
crates/federate-root/: Cargo.toml
crates/federate-root/src/: lib.rs
crates/federate-search/: Cargo.toml
crates/federate-search/src/: lib.rs
crates/federate-searchd/: Cargo.toml
crates/federate-searchd/src/: main.rs
crates/federate-server/: Cargo.toml
crates/federate-server/src/: main.rs
crates/federate-storage/: Cargo.toml
crates/federate-storage/src/: lib.rs
crates/federate-transport/: Cargo.toml
crates/federate-transport/src/: lib.rs
crates/federate-uri/: Cargo.toml
crates/federate-uri/src/: lib.rs
crates/federated/: Cargo.toml
crates/federated/src/: main.rs
data/blocked/: brand-safety-tlds.txt  policy-tlds.txt  reserved-tlds.txt
deploy/: federate-dns.mobileconfig  federate-node.env.example  federate.toml.example  hosts-federate.txt
deploy/caddy/: Caddyfile
deploy/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  landing-nginx.conf  traefik-federate-catchall.yml  traefik-federate-network.yml
deploy/launchd/: network.federate.federated.plist
deploy/systemd/: federate-dnsd.service  federate-gatewayd.service  federate-server.service  federated.service
deploy/windows-service/: README.md
docs/: README.md  architecture.md  blocked-tlds.md  decentralization.md  deployment-hetzner.md  deployment-vps.md  desktop-setup.md  dns-nodes.md  dns-resolver.md  gateway-nodes.md  hosts-setup.md  https-local.md  manifesto.md  markdown-pages.md  node-directory.md  nodes.md  port-80-setup.md  protocol.md  root-mirrors.md  signatures.md  storage-cdn-nodes.md  tld-hierarchy.md  tld-marketplace-roadmap.md  troubleshooting.md
docs/en-US/: README.md  architecture.md  backups.md  blocked-tlds.md  browser-compatibility.md  decentralization.md  deployment-vps.md  desktop-setup.md  dns-nodes.md  dns-resolver.md  federate-uri.md  future-federate-browser.md  gateway-nodes.md  hosts-setup.md  https-local.md  manifesto.md  markdown-pages.md  migrations.md  mutations.md  native-protocol.md  node-directory.md  nodes.md  non-html-runtime-roadmap.md  overlay-network.md  port-80-setup.md  protocol.md  publishing.md  root-mirrors.md  root-registry.md  security.md  signatures.md  storage-cdn-nodes.md  tld-hierarchy.md  tld-marketplace-roadmap.md  troubleshooting.md  vision.md
docs/pt-BR/: README.md  architecture.md  backups.md  blocked-tlds.md  browser-compatibility.md  decentralization.md  deployment-hetzner.md  deployment-vps.md  desktop-setup.md  dns-nodes.md  dns-resolver.md  federate-uri.md  future-federate-browser.md  gateway-nodes.md  hosts-setup.md  https-local.md  manifesto.md  markdown-pages.md  migrations.md  mutations.md  native-protocol.md  node-directory.md  nodes.md  non-html-runtime-roadmap.md  overlay-network.md  port-80-setup.md  protocol.md  publishing.md  root-mirrors.md  root-registry.md  security.md  signatures.md  storage-cdn-nodes.md  tld-hierarchy.md  tld-marketplace-roadmap.md  troubleshooting.md  vision.md
seeds/: official-tlds.toml
sites/eu-femboy/: index.html
sites/federate-network/: index.en.md  index.html  index.pt.md  install.ps1  install.sh  style.css
sites/home-fed/: fed-md.js  index.en.md  index.html  index.pt.md  manifesto.en.md  manifesto.html  manifesto.pt.md  style.css  tlds.en.md  tlds.html  tlds.pt.md
