[package]
name = "federate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "federate"
path = "src/main.rs"

[dependencies]
federate-core = { workspace = true }
federate-identity = { workspace = true }
federate-client = { workspace = true }
federate-naming = { workspace = true }
federate-root = { workspace = true }
federate-manifest = { workspace = true }
federate-storage = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
federate-directory = { workspace = true }
federate-node = { workspace = true }
federate-dns = { workspace = true }
federate-uri = { workspace = true }
federate-resolution = { workspace = true }
rand = { workspace = true }
