[package]
name = "federate-gatewayd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "federate-gatewayd"
path = "src/main.rs"

[dependencies]
federate-core = { workspace = true }
federate-client = { workspace = true }
federate-resolution = { workspace = true }
federate-directory = { workspace = true }
federate-gateway = { workspace = true }
federate-node = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
