[package]
name = "federate-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
federate-client = { workspace = true }
federate-core = { workspace = true }
federate-naming = { workspace = true }
federate-root = { workspace = true }
federate-identity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
