[package]
name = "federate-resolution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
federate-core = { workspace = true }
federate-naming = { workspace = true }
federate-root = { workspace = true }
federate-manifest = { workspace = true }
federate-storage = { workspace = true }
federate-client = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
mime_guess = { workspace = true }
tracing = { workspace = true }
federate-directory = { workspace = true }
federate-cdn = { workspace = true }
federate-registry = { workspace = true }
federate-uri = { workspace = true }
federate-identity = { workspace = true }
federate-protocol = { workspace = true }
federate-transport = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
chrono = { workspace = true }
