[package]
name = "federate-root"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
federate-core = { workspace = true }
federate-naming = { workspace = true }
federate-identity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
