[package]
name = "federate-searchd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "federate-searchd"
path = "src/main.rs"

[dependencies]
federate-core = { workspace = true }
federate-client = { workspace = true }
federate-resolution = { workspace = true }
federate-search = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
