[package]
name = "federated"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "federated"
path = "src/main.rs"

[dependencies]
federate-core = { workspace = true }
federate-identity = { workspace = true }
federate-client = { workspace = true }
federate-resolution = { workspace = true }
federate-bootstrap = { workspace = true }
federate-gateway = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
